<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- ***************************
	     About information
	     *************************** -->
	     
	<!-- Automatically filled in by Launchpad: -->
	<string name="about_translators">translator-credits</string>
	
    <!-- Short explanation of the application (max. 80 characters) -->
	<string name="about_comments">Keep the camera flash or the backlight turned on with OI Flashlight.</string>
	
	<!-- ***************************
	     Applicatio-specific strings
	     *************************** -->
	<!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
    <string name="app_name">OI Flashlight</string>
    
    <string name="backlight_info">The backlight stays turned on.</string>
    
    <string name="color">Color</string>
    
    <!-- Application name should be consistent across translations. -->
    <string name="color_picker">OI Color Picker</string>
    
    <string name="preferences">Preferences</string>
    
	<!-- ***************************
	     Preferences
	     *************************** -->
	
	<!-- Title for preferences or settings -->
	<string name="settings_titlebar">Preferences</string>
	
	<!-- ***************************
	     Distribution
	     *************************** -->
	
	<!-- Explanation that is displayed if Color Picker has not been installed yet, but 
		user tries to access it. -->
    <string name="color_picker_modularization_explanation">To make the Color Picker more useful to other developers, we have split it into its own app.</string>
    <string name="setting_use_camera_flash">Use camera flash</string>
    <string name="setting_use_camera_flash_summary">Use the camera flash instead of the screen backlight.</string><!--  (Warning: Prolonged camera flash usage may damage it) -->
    <!-- Information to enable the camera flash as flashlight. -->
    <string name="cameralight_info">Press to enable camera light (May take a second).</string>
    <string name="cameralight_stop_info">Press to disable camera light.</string>
    <string name="settings_color_options">Choose Color Options</string>
    <string name="settings_color_options_summary">Choose either to remember color or to display random colors</string>
    <string name="settings_color_options_dialog_title">Choose Color Options</string>
    <string-array name="settings_color_options_entries">
        <item >Keep Color</item>
        <item >Random Color</item>
        <item >White</item>
    </string-array>
    <string name="settings_set_time_summary">Select the rate at which the color changes in random mode</string>
   <string name="settings_set_time_title">Frequency Options</string>
    <string name="settings_time_dialog_title">Set frequency</string>
    <string name="settings_set_time_default">Eg. 40</string>
</resources>
